fix: 🐞 fixed the iphones display and the overflow
The iphones were overflowed in the wrong way. Needed to set an overflow
over the whole page.

--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -19,6 +19,7 @@ body {
 	font-family: 'Rubik', sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	overflow-x: hidden;
 }
 
 #root {
